@@ -2,6 +2,7 @@ package com.gm.hrms.service.impl;
 
 import com.gm.hrms.dto.request.DepartmentRequestDTO;
 import com.gm.hrms.dto.response.DepartmentResponseDTO;
+import com.gm.hrms.dto.response.PageResponseDTO;
 import com.gm.hrms.entity.Department;
 import com.gm.hrms.exception.DuplicateResourceException;
 import com.gm.hrms.exception.ResourceNotFoundException;
@@ -9,6 +10,8 @@ import com.gm.hrms.mapper.DepartmentMapper;
 import com.gm.hrms.repository.DepartmentRepository;
 import com.gm.hrms.service.DepartmentService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -20,7 +23,7 @@ public class DepartmentServiceImpl implements DepartmentService {
 
     private final DepartmentRepository repository;
 
-    //  CREATE
+    // CREATE
     @Override
     public DepartmentResponseDTO createDepartment(DepartmentRequestDTO dto) {
 
@@ -30,12 +33,18 @@ public class DepartmentServiceImpl implements DepartmentService {
             );
         }
 
+        if (repository.existsByCode(dto.getCode())) {
+            throw new DuplicateResourceException(
+                    "Department already exists with code: " + dto.getCode()
+            );
+        }
+
         Department dept = DepartmentMapper.toEntity(dto);
 
         return DepartmentMapper.toResponse(repository.save(dept));
     }
 
-    //  UPDATE
+    // UPDATE
     @Override
     public DepartmentResponseDTO updateDepartment(Long id, DepartmentRequestDTO dto) {
 
@@ -45,8 +54,8 @@ public class DepartmentServiceImpl implements DepartmentService {
                                 "Department not found with id: " + id
                         ));
 
-        // Optional duplicate check during update
-        if (repository.existsByName(dto.getName()) &&
+        if (dto.getName() != null &&
+                repository.existsByName(dto.getName()) &&
                 !dept.getName().equalsIgnoreCase(dto.getName())) {
 
             throw new DuplicateResourceException(
@@ -54,12 +63,22 @@ public class DepartmentServiceImpl implements DepartmentService {
             );
         }
 
-        dept.setName(dto.getName());
+        if (dto.getCode() != null &&
+                repository.existsByCode(dto.getCode()) &&
+                !dept.getCode().equalsIgnoreCase(dto.getCode())) {
+
+            throw new DuplicateResourceException(
+                    "Department already exists with code: " + dto.getCode()
+            );
+        }
+
+        // update using mapper
+        DepartmentMapper.patchUpdate(dept, dto);
 
         return DepartmentMapper.toResponse(repository.save(dept));
     }
 
-    //  GET BY ID
+    // GET BY ID
     @Override
     public DepartmentResponseDTO getDepartmentById(Long id) {
 
@@ -72,17 +91,28 @@ public class DepartmentServiceImpl implements DepartmentService {
         return DepartmentMapper.toResponse(dept);
     }
 
-    //  GET ALL
     @Override
-    public List<DepartmentResponseDTO> getAllDepartments() {
+    public PageResponseDTO<DepartmentResponseDTO> getAllDepartments(Pageable pageable) {
 
-        return repository.findAll()
+        Page<Department> page = repository.findAll(pageable);
+
+        List<DepartmentResponseDTO> content = page.getContent()
                 .stream()
                 .map(DepartmentMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return PageResponseDTO.<DepartmentResponseDTO>builder()
+                .content(content)
+                .page(page.getNumber())
+                .size(page.getSize())
+                .totalElements(page.getTotalElements())
+                .totalPages(page.getTotalPages())
+                .first(page.isFirst())
+                .last(page.isLast())
+                .build();
     }
 
-    //  DELETE
+    // DELETE
     @Override
     public void deleteDepartment(Long id) {
 
